                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-06-06
 * Moved environment setup into various OS specific readme files.

2016-06-03
 * Added WING_NO_EMAIL environment variable to skip sending email all together.
 * Added wait_on_wingman() and cleanup_wait_on_wingman() to Wing::TestHelper. 
 * Wing::TestHelper automatically recovers from a bad cleanup of the Andy test user.

2016-05-30
 * A few changes and bug fixes for better testing.

2016-05-24
 * If a field is defined as required or unique then we no longer allow empty string '' as a valid value.

2016-05-10
 * Added a --force option to wing class --add so that you don't accidentally overwrite your classes.
 * Added documentation for undocumented features of wing.angular.js.

2016-05-05
 * Upgraded to latest angular and angular-ui.

2016-04-28
 * Added "on_all_done" option for the .all() method in objectListManager in wing.angular.js.

2016-04-18
 * Changed the default path for the fastmmap cache so projects don't trounce on each other's cache.

2016-04-14
 * Added { join_type => 'left' } on parent relationships that are not required, which will allow prefetches and joins where the object doesn't exist.
 * You can now specify _include_related_objects=relationshipname and pull back only the objects you want, not all related objects.

2016-03-30
 * Added checklist directive to wing.angular.js

2016-03-28
 * wing.angular.js objectListManager now has call() and reset() methods.

2016-03-23
 * wing.angular.js objectManager now passes behavior fetch_options to delete().

2016-03-12
 * Added "generate_password_reset_code" method to Wing::Role::Result::User.

2016-03-11
 * Added the can_link_to method in Wing::DB::Result, which is used for owner checking in Wing::Role::Result::Parent.
