@@ -140,6 +140,99 @@ sub wing_object_api_uri {
     return '/api/'.$self->wing_object_type.'/'.$self->id;
 }
 
+=head2 warnings ([warnings])
+
+An array reference containing a list of warnings that were generated by this object on this invocation. These warnings are not persisted in the database. They will appear in the output of the C<describe()> method.
+
+=over
+
+=item warnings
+
+You may optionally replace the array reference by passing one in. 
+
+=over 
+
+=item warning
+
+An array reference containing the warning.
+
+=over
+
+=item code
+
+The error code for this warning.
+
+=item message
+
+The human readable message for this warning.
+
+=item data
+
+Some debugging information. Optional.
+
+=back
+
+=back
+
+=back
+
+=cut
+
+my $warnings = [];
+
+sub warnings {
+    my ($self, $replace) = @_;
+    if (defined $replace) {
+        $warnings = $replace;
+    }
+    return $warnings;
+}
+
+sub has_warnings {
+    return scalar @{$warnings};
+}
+
+=head2 add_warning ( warning ) 
+
+Adds a warning to the describe output of this object. In this way, you can handle minor errors automatically and just let the user know what was done.
+
+=over
+
+=item warning
+
+An array reference containing the warning to set.
+
+=over
+
+=item code
+
+The error code for this warning.
+
+=item message
+
+The human readable message for this warning.
+
+=item data
+
+Some debugging information. Optional.
+
+=back
+
+=back
+
+=cut
+
+sub add_warning {
+    my ($self, $warning) = @_;
+    my $warnings = $self->warnings;
+    push @{$warnings}, {
+        code    => $warning->[0],
+        message => $warning->[1],
+        data    => $warning->[2],
+    };
+    $self->warnings($warnings);
+}
+
 =head2 describe(options)
 
 Serializes important data about the object and returns it as a hash reference.
@@ -214,6 +307,14 @@ sub describe {
     };
     if (defined $options{current_user} && $options{include_private}) {
         $out->{can_edit} = (eval { $self->can_edit($options{current_user}) }) ? 1 : 0;
+    }
+    if ($self->has_warnings) {
+        if (exists $out->{_warnings}) {
+            push @{$out->{_warnings}}, @{$self->warnings};
+        }
+        else {
+            $out->{_warnings} = $self->warnings;
+        }
     }
     if ($options{include_options}) {
         $out->{_options} = $self->field_options(%options);
