@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2016-06-10
+ * Added add_warning() to the Result base class for all objects in Wing. 
+ * _warnings can be output for the describe method on all objects now.
+
 2016-06-06
  * Moved environment setup into various OS specific readme files.
 
